<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_gradient"
    android:clipToPadding="false"
    android:fillViewport="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".RptFAHarian">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom2"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Light" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_location_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@+id/sp_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
            </Spinner>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_afdeling_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@+id/sp_afdeling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
            </Spinner>

            <Button
                android:id="@+id/btnGenerate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/gen_LHA"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
